# Bike-Claude

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes_ai.py  routes_dashboard.py  routes_etl.py  routes_health.py
backend/app/core/: __init__.py  config.py  logging.py  secrets.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/mock/: __init__.py  seed.py
backend/app/models/: __init__.py  alert.py  cur_station_status.py  data_source.py  fact_station_snapshot.py  fetch_log.py  gbfs_feed.py  region.py  station.py
backend/app/schemas/: __init__.py  ai.py  alert.py  dashboard.py  etl.py  region.py  station.py
backend/app/services/: __init__.py  ai_context_service.py  ai_tools.py  dashboard_service.py  etl_service.py  gbfs_client.py  kimi_client.py  scheduler_service.py
backend/tests/: conftest.py  test_dashboard.py  test_health.py  test_secrets.py
docs/: FINAL_CHECKLIST.md  PROJECT_EXPLANATION_FOR_BEGINNERS.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(platform)/: layout.tsx
frontend/app/map-debug/: page.tsx
frontend/components/: theme-mode-toggle.tsx
frontend/components/ai/: ai-chat-drawer.tsx  ai-floating-button.tsx  ai-input.tsx  ai-message-bubble.tsx  ai-message-list.tsx  ai-suggestion-cards.tsx  ai-tool-call-card.tsx  index.ts
frontend/components/common/: empty-state.tsx  error-state.tsx  (+2 more)
frontend/lib/: format.ts  time.ts
frontend/types/: ai.ts
(+56 files in other folders)
